--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1001,13 +1001,14 @@ deny 23.137.253.110;
 deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.137;
+deny 23.151.8.8;
 deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.154.177.10;
 deny 23.154.177.11;
-deny 23.154.177.12;
 deny 23.154.177.13;
 deny 23.154.177.14;
+deny 23.154.177.15;
 deny 23.154.177.16;
 deny 23.154.177.17;
 deny 23.154.177.18;
@@ -1026,7 +1027,6 @@ deny 23.154.177.30;
 deny 23.154.177.31;
 deny 23.154.177.7;
 deny 23.154.177.8;
-deny 23.154.177.9;
 deny 23.155.8.104;
 deny 23.184.48.13;
 deny 23.184.48.254;
@@ -1070,6 +1070,7 @@ deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
 deny 2602:f704:10::1;
+deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
@@ -1603,6 +1604,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1743,6 +1745,7 @@ deny 45.128.133.242;
 deny 45.130.60.248;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
