--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -123,7 +123,6 @@ allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
 allow 109.228.160.190;
-allow 109.248.11.6;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -212,7 +211,6 @@ allow 162.247.74.7;
 allow 162.251.5.152;
 allow 163.172.45.102;
 allow 164.132.172.209;
-allow 165.154.192.214;
 allow 165.73.242.163;
 allow 166.70.207.2;
 allow 167.99.85.203;
@@ -257,6 +255,7 @@ allow 176.65.143.138;
 allow 176.65.144.142;
 allow 176.65.144.94;
 allow 176.97.114.202;
+allow 177.149.133.77;
 allow 178.162.197.91;
 allow 178.17.170.144;
 allow 178.17.171.102;
@@ -298,7 +297,6 @@ allow 185.100.87.253;
 allow 185.100.87.41;
 allow 185.10.16.41;
 allow 185.106.102.102;
-allow 185.107.106.33;
 allow 185.107.57.64;
 allow 185.107.57.65;
 allow 185.107.57.66;
@@ -1011,6 +1009,7 @@ allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
+allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
 allow 23.154.177.18;
@@ -1028,8 +1027,8 @@ allow 23.154.177.29;
 allow 23.154.177.30;
 allow 23.154.177.31;
 allow 23.154.177.7;
-allow 23.154.177.8;
 allow 23.154.177.9;
+allow 23.155.8.104;
 allow 23.184.48.13;
 allow 23.184.48.254;
 allow 23.184.48.78;
@@ -1070,6 +1069,7 @@ allow 2600:3c09::f03c:95ff:fe2d:cc40;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:f704:10::1;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:61b::1;
@@ -1620,7 +1620,6 @@ allow 2a0d:bbc7:0:1::3cc;
 allow 2a0d:bbc7:0:1::3d5;
 allow 2a0d:bbc7:0:1::7f;
 allow 2a0d:c2c0:1:4::2;
-allow 2a0d:c580:1:3:95::1;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
