--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -123,7 +123,6 @@ deny 109.199.101.106;
 deny 109.199.101.134;
 deny 109.199.105.142;
 deny 109.228.160.190;
-deny 109.248.11.6;
 deny 109.69.67.17;
 deny 109.70.100.1;
 deny 109.70.100.2;
@@ -212,7 +211,6 @@ deny 162.247.74.7;
 deny 162.251.5.152;
 deny 163.172.45.102;
 deny 164.132.172.209;
-deny 165.154.192.214;
 deny 165.73.242.163;
 deny 166.70.207.2;
 deny 167.99.85.203;
@@ -257,6 +255,7 @@ deny 176.65.143.138;
 deny 176.65.144.142;
 deny 176.65.144.94;
 deny 176.97.114.202;
+deny 177.149.133.77;
 deny 178.162.197.91;
 deny 178.17.170.144;
 deny 178.17.171.102;
@@ -298,7 +297,6 @@ deny 185.100.87.253;
 deny 185.100.87.41;
 deny 185.10.16.41;
 deny 185.106.102.102;
-deny 185.107.106.33;
 deny 185.107.57.64;
 deny 185.107.57.65;
 deny 185.107.57.66;
@@ -1011,6 +1009,7 @@ deny 23.154.177.11;
 deny 23.154.177.12;
 deny 23.154.177.13;
 deny 23.154.177.14;
+deny 23.154.177.15;
 deny 23.154.177.16;
 deny 23.154.177.17;
 deny 23.154.177.18;
@@ -1028,8 +1027,8 @@ deny 23.154.177.29;
 deny 23.154.177.30;
 deny 23.154.177.31;
 deny 23.154.177.7;
-deny 23.154.177.8;
 deny 23.154.177.9;
+deny 23.155.8.104;
 deny 23.184.48.13;
 deny 23.184.48.254;
 deny 23.184.48.78;
@@ -1070,6 +1069,7 @@ deny 2600:3c09::f03c:95ff:fe2d:cc40;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:f704:10::1;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:61b::1;
@@ -1620,7 +1620,6 @@ deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
-deny 2a0d:c580:1:3:95::1;
 deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
