--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -132,6 +132,7 @@ set_real_ip_from 2600:3c09::f03c:95ff:fe2d:cc40;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:f704:10::1;
 set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:61b::1;
@@ -681,7 +682,6 @@ set_real_ip_from 2a0d:bbc7:0:1::3cc;
 set_real_ip_from 2a0d:bbc7:0:1::3d5;
 set_real_ip_from 2a0d:bbc7:0:1::7f;
 set_real_ip_from 2a0d:c2c0:1:4::2;
-set_real_ip_from 2a0d:c580:1:3:95::1;
 set_real_ip_from 2a0e:1d80:13:51e8::1;
 set_real_ip_from 2a0e:1d80:17:6f8d::1;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
