--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -44,6 +44,7 @@ set_real_ip_from 104.244.79.236;
 set_real_ip_from 104.244.79.44;
 set_real_ip_from 104.244.79.50;
 set_real_ip_from 104.244.79.61;
+set_real_ip_from 107.172.31.218;
 set_real_ip_from 107.172.75.153;
 set_real_ip_from 107.172.76.141;
 set_real_ip_from 107.173.143.32;
@@ -119,10 +120,12 @@ set_real_ip_from 108.59.12.3;
 set_real_ip_from 108.61.189.136;
 set_real_ip_from 109.104.153.22;
 set_real_ip_from 109.169.33.163;
+set_real_ip_from 109.172.84.107;
 set_real_ip_from 109.199.101.106;
 set_real_ip_from 109.199.101.134;
 set_real_ip_from 109.199.105.142;
 set_real_ip_from 109.228.160.190;
+set_real_ip_from 109.248.11.6;
 set_real_ip_from 109.69.67.17;
 set_real_ip_from 109.70.100.1;
 set_real_ip_from 109.70.100.2;
@@ -712,7 +715,7 @@ set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.144.178.185;
 set_real_ip_from 198.144.178.187;
-set_real_ip_from 198.167.206.232;
+set_real_ip_from 198.167.206.158;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -979,12 +982,12 @@ set_real_ip_from 209.141.54.218;
 set_real_ip_from 209.141.55.26;
 set_real_ip_from 209.141.58.254;
 set_real_ip_from 209.141.61.52;
+set_real_ip_from 209.145.61.207;
 set_real_ip_from 212.21.66.6;
 set_real_ip_from 212.38.189.186;
 set_real_ip_from 212.69.167.80;
 set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
-set_real_ip_from 212.95.54.78;
 set_real_ip_from 216.238.111.124;
 set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
@@ -1619,6 +1622,7 @@ set_real_ip_from 2a0d:bbc7:0:1::3cc;
 set_real_ip_from 2a0d:bbc7:0:1::3d5;
 set_real_ip_from 2a0d:bbc7:0:1::7f;
 set_real_ip_from 2a0d:c2c0:1:4::2;
+set_real_ip_from 2a0d:c580:1:3:95::1;
 set_real_ip_from 2a0e:1d80:13:51e8::1;
 set_real_ip_from 2a0e:1d80:17:6f8d::1;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1896,7 +1900,6 @@ set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 66.78.40.182;
 set_real_ip_from 67.219.109.141;
-set_real_ip_from 67.84.26.102;
 set_real_ip_from 70.34.249.72;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 72.14.179.10;
