--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -125,7 +125,6 @@ allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
 allow 109.228.160.190;
-allow 109.248.11.6;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -142,6 +141,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
+allow 118.15.2.170;
 allow 118.163.74.160;
 allow 121.78.28.166;
 allow 123.253.35.32;
@@ -151,7 +151,6 @@ allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
-allow 13.114.236.205;
 allow 131.226.2.22;
 allow 135.225.96.187;
 allow 136.244.111.163;
@@ -174,6 +173,7 @@ allow 144.172.118.73;
 allow 146.59.126.232;
 allow 146.59.231.4;
 allow 147.45.116.145;
+allow 149.102.132.150;
 allow 149.202.79.101;
 allow 149.202.79.129;
 allow 149.56.22.133;
@@ -181,7 +181,6 @@ allow 149.56.44.47;
 allow 152.32.199.79;
 allow 152.53.133.14;
 allow 152.53.53.243;
-allow 153.216.194.187;
 allow 154.16.116.61;
 allow 154.26.159.157;
 allow 154.41.95.1;
@@ -253,12 +252,8 @@ allow 176.121.81.51;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.58.124.159;
-allow 176.65.134.61;
 allow 176.65.143.138;
-allow 176.65.144.142;
-allow 176.65.144.94;
 allow 176.97.114.202;
-allow 177.149.133.77;
 allow 178.162.197.91;
 allow 178.17.170.144;
 allow 178.17.171.102;
@@ -271,6 +266,7 @@ allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.96;
 allow 178.218.144.99;
+allow 179.35.13.37;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -1622,7 +1618,6 @@ allow 2a0d:bbc7:0:1::3cc;
 allow 2a0d:bbc7:0:1::3d5;
 allow 2a0d:bbc7:0:1::7f;
 allow 2a0d:c2c0:1:4::2;
-allow 2a0d:c580:1:3:95::1;
 allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1648,6 +1643,7 @@ allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5bdd::beef;
 allow 2a0f:85c1:356:5f5a::1;
+allow 2a0f:ca80:1337::7da1:75ca;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1840,6 +1836,7 @@ allow 46.250.242.141;
 allow 46.30.188.218;
 allow 47.254.142.180;
 allow 47.89.193.230;
+allow 50.118.225.222;
 allow 5.104.86.6;
 allow 51.15.59.15;
 allow 51.195.166.174;
