--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -217,7 +217,6 @@ allow 2605:6400:30:f858:2704:73e1:7085:12ef;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
-allow 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
@@ -397,6 +396,7 @@ allow 2a03:4000:6:614:d803:40ff:fec3:832a;
 allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+allow 2a03:6f20:531::254;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
 allow 2a03:e600:100::3;
@@ -667,6 +667,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
